--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,13 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Bookers</title>
-</head>
-<body>
-	<h1>ようこそ<strong>Bookers</strong>へ！</h1>
-	<p><strong>Bookers</strong>では、さまざまな書籍に関するあなたの意見や<br>
-	印象を共有し交換することができます</p>
-	<a href=/books>start</a>
-</body>
-</html>
+<h1>Books</h1>
+<table>
+	<thead>
+		<tr>
+			<th>Title</th>
+			<th>Boby</th>
+			<th colspan="3"></th>
+		</tr>
+	</thead>
+	<tbosy>
+		<tr>
+			<td>a</td>
+			<td>b</td>
+		</tr>
+		<tr>
+			<td>c</td>
+			<td>d</td>
+		</tr>
+		<tr>
+			<td>e</td>
+			<td>f</td>
+		</tr>
+</table>
+
+
+<h2>New Book</h2>
+<%= form_for(@book) do |f| %>
+   <h3>Title</h3>
+   <%=f.text_field :title %>
+
+   <h3>Boby</h3>
+   <%=f.text_area :body %>
+
+   <%= f.submit 'Create Book' %>
+<%end%>
