--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<h1>Books</h1>
+<table>
+	<thead>
+		<tr>
+			<th>Title</th>
+			<th>Boby</th>
+			<th colspan="3"></th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>data</td>
+		</tr>
+	</tbody>
+</table>
+<h2>New Book</h2>
+<%=form_for(@book,url:'/book')do |f|%>
+ <h3>Title</h3>
+ <%=f.text_field :title %>
+
+ <h3>Boby</h3>
+ <%=f.text_area :body %>
+
+ <%=f.submit 'Create Book' %>
+<%end%>
