--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<p>Book was successfully created.</p>
+
+<strong>Title</strong>
+<p><%= @book.title %></p>
+<strong>Body</strong>
+<P><%= @book.body %></P>
