--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,14 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+
+<%= form_for(@book) do |f|%>
+
+<h2>Title</h2>
+<%=f.text.field:title %>
+<h2>Body</h2>
+<%=f.text_area:body %>
+<%=f.submit'Update Book' %>
+
+<% end %>
+
+<a class=show href=/books>Edit</a>
+<a class=back href=/books>Back</a>
