--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,22 +8,14 @@
 		</tr>
 	</thead>
 	<tbosy>
-		<tr>
-			<td>リーダブルコード</td>
-			<td>より良いコードを書くためのシンプルで実践的なテクニック</td>
-		</tr>
-		<tr>
-			<td>トラブル知らずのシステム設計</td>
-			<td>システム設計の要点を図解で説明してくれます</td>
-		</tr>
-		<tr>
-			<td>たのしいRuby</td>
-			<td>Rubyの入門におすすめです</td>
-		</tr>
 		<% @books.each do |book| %>
 		<tr>
 			<td><%=book.title %></td>
 			<td><%=book.body %></td>
+			<td>Show</td>
+			<td>Edit</td>
+			<td><%= link_to "Destroy", book_path(book.id), method: :delete, "date-confirm" => "本当に削除しますか？" %>
+			</td>
 		</tr>
 		<% end %>
 </table>
