--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,5 +5,6 @@
 <strong>Body</strong>
 <P><%= @book.body %></P>
 
-<a class=edit href=/books/edit>Edit</a>
+<%=link_to "Edit",edit_book_path(@book.id)%>
+|
 <a class=back href=/books>Back</a>
