--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,9 +12,9 @@
 		<tr>
 			<td><%=book.title %></td>
 			<td><%=book.body %></td>
-			<td>Show</td>
-			<td>Edit</td>
-			<td><%= link_to "Destroy", book_path(book.id), method: :delete, "date-confirm" => "本当に削除しますか？" %>
+			<td> <%=link_to"Show",book_path(book.id) %></td>
+			<td><%=link_to"Edit",edit_book_path(book.id)%></td>
+			<td><%=link_to"Destroy",book_path(book.id), method: :delete %>
 			</td>
 		</tr>
 		<% end %>
