--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
 		<tr>
 			<td><%=book.title %></td>
 			<td><%=book.body %></td>
-			<td> <%=link_to"Show",book_path(book.id) %></td>
+			<td><%=link_to"Show",book_path(book.id) %></td>
 			<td><%=link_to"Edit",edit_book_path(book.id)%></td>
 			<td><%=link_to"Destroy",book_path(book.id), method: :delete %>
 			</td>
@@ -20,9 +20,18 @@
 		<% end %>
 </table>
 
-
 <h2>New Book</h2>
 <%= form_for(@book) do |f| %>
+<% if @book.errors.any? %>
+   <div id=error_explanation>
+   	<h2><%= @book.error.count %> errors prihibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
    <h3>Title</h3>
    <%=f.text_field :title %>
 
