--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
 			<td><%=book.body %></td>
 			<td><%=link_to"Show",book_path(book.id) %></td>
 			<td><%=link_to"Edit",edit_book_path(book.id)%></td>
-			<td><%=link_to"Destroy",book_path(book.id), method: :delete %>
+			<td><%=link_to"Destroy",book_path(book.id), method: :delete,"data-confirm"=>"本当に削除しますか？"%>
 			</td>
 		</tr>
 		<% end %>
@@ -24,7 +24,7 @@
 <%= form_for(@book) do |f| %>
 <% if @book.errors.any? %>
    <div id=error_explanation>
-   	<h2><%= @book.error.count %> errors prihibited this book from being saved:</h2>
+   	<h2><%= @book.errors.count %> error prihibited this book from being saved:</h2>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
