--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -10,6 +10,6 @@
 
 <% end %>
 
-<a class=edit href=/books>Edit</a>
+<%=link_to"Show",book_path(@book.id) %></td>
 |
 <a class=back href=/books>Back</a>
